# passd

./: LICENSE.md  pyproject.toml  readme.md  setup.py
passd/: cli.py
